# claude-marketplace-builder

./: .gitignore  CLAUDE.md  README.md
.claude-plugin/: marketplace.json
.claude/skills/build-skill/: SKILL.md
.github/workflows/: skill-routing-evals.yaml
docs/: INSTALL.md  SKILL-AUTHORING.md
evals/: pyproject.toml
evals/src/skill_evals/: __init__.py  models.py  runner.py
evals/test-cases/: skill-routing.yaml
plugins/databricks-skills/skills/databricks-lineage/: SKILL.md
plugins/databricks-skills/skills/databricks-lineage/scripts/: get_column_lineage.py  get_table_lineage.py  search_lineage.py
plugins/databricks-skills/skills/databricks-workspace-files/: SKILL.md
plugins/databricks-skills/skills/databricks-workspace-files/scripts/: list_workspace.py
plugins/marketplace-management/.claude-plugin/: plugin.json
plugins/marketplace-management/skills/update-skills/: SKILL.md
plugins/specialized-tools/.claude-plugin/: plugin.json
scripts/: init.sh  install.sh  update.sh
